[package]
authors = ["Brian Smith <brian@briansmith.org>"]
name = "pregenerate_asm"
version = "0.0.1"

[[bin]]
name = "pregenerate_asm"
path = "../build.rs"

# Keep this in sync with `[build-dependencies]` in ../Cargo.toml.
[dependencies]
cc = { git = "https://github.com/GeorgeHahn/cc-rs", branch = "better-flag-checking", rev = "e763bb23a12c953cd38c2405d4b5f86f6ab46297"}
